.k8s/service-redis.yml
apiVersion: v1
kind: Service
metadata:
  name: cache-redis-service
spec:
  ports:
  - port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app: sxplr-redis
  type: ClusterIP
