.k8s/ingress-sxplr.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: siibra-explorer-prod-ingress
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts: 
    - siibra-explorer.apps.tc.humanbrainproject.eu
    secretName: siibra-explorer-prod-secret
  rules:
  - host: siibra-explorer.apps.tc.humanbrainproject.eu
    http:
      paths:
      - path: /viewer
        pathType: Prefix
        backend:
          service:
            name: siibra-explorer-prod-service
            port:
              number: 8080
